Closed Bug 1103868 Opened 10 years ago Closed 10 years ago

'SupportsD2D1' : is not a member of 'mozilla::gfx::Factory'

Categories

(Core :: Graphics, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: ewong, Assigned: neil)

References

Details

Attachments

(1 file)

Getting this in trunk Win32 build: mozmake.exe[4]: Entering directory 'e:/builds/slave/c-cen-t-w32/build/objdir/mailnews/import/text/src' mkdir -p '.deps/' gfxWindowsPlatform.cpp e:/builds/slave/c-cen-t-w32/build/mozilla/gfx/thebes/gfxWindowsPlatform.cpp(619) : error C2039: 'SupportsD2D1' : is not a member of 'mozilla::gfx::Factory' e:\builds\slave\c-cen-t-w32\build\objdir\dist\include\mozilla/gfx/2D.h(1082) : see declaration of 'mozilla::gfx::Factory' e:/builds/slave/c-cen-t-w32/build/mozilla/gfx/thebes/gfxWindowsPlatform.cpp(619) : error C3861: 'SupportsD2D1': identifier not found nsTextAddress.cpp e:/builds/slave/c-cen-t-w32/build/objdir/_virtualenv/Scripts/python.exe -m mozbuild.action.cl cl -FonsTextAddress.obj -c -I../../../../dist/stl_wrappers -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DOSTYPE=\"WINNT5.2\" -DOSARCH=WINNT -DNO_NSPR_10_SUPPORT -Ie:/builds/slave/c-cen-t-w32/build/mailnews/import/text/src -I. -Ie:/builds/slave/c-cen-t-w32/build/mailnews/import/text/src/../../src -I../../../../dist/include -Ie:/builds/slave/c-cen-t-w32/build/objdir/dist/include/nspr -Ie:/builds/slave/c-cen-t-w32/build/objdir/dist/include/nss -MD -FI ../../../../dist/include/mozilla-config.h -DMOZILLA_CLIENT -TP -nologo -D_HAS_EXCEPTIONS=0 -W3 -Gy -wd4251 -wd4244 -wd4267 -wd4345 -wd4351 -wd4482 -wd4800 -wd4819 -we4553 -GR- -DNDEBUG -DTRIMMED -Zi -Zi -UDEBUG -DNDEBUG -O1 -Oi -Oy- -Fdgenerated.pdb e:/builds/slave/c-cen-t-w32/build/mailnews/import/text/src/nsTextAddress.cpp nsTextImport.cpp e:/builds/slave/c-cen-t-w32/build/mozilla/config/rules.mk:934: recipe for target 'gfxWindowsPlatform.obj' failed mozmake.exe[4]: Leaving directory 'e:/builds/slave/c-cen-t-w32/build/objdir/gfx/thebes' e:/builds/slave/c-cen-t-w32/build/mozilla/config/recurse.mk:74: recipe for target 'gfx/thebes/target' failed e:/builds/slave/c-cen-t-w32/build/objdir/_virtualenv/Scripts/python.exe -m mozbuild.action.cl cl -FonsEudoraEditor.obj -c -I../../../../dist/stl_wrappers -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DOSTYPE=\"WINNT5.2\" -DOSARCH=WINNT -DNO_NSPR_10_SUPPORT -Ie:/builds/slave/c-cen-t-w32/build/mailnews/import/eudora/src -I. -Ie:/builds/slave/c-cen-t-w32/build/mailnews/import/eudora/src/../../src -I../../../../dist/include -Ie:/builds/slave/c-cen-t-w32/build/objdir/dist/include/nspr -Ie:/builds/slave/c-cen-t-w32/build/objdir/dist/include/nss -MD -FI ../../../../dist/include/mozilla-config.h -DMOZILLA_CLIENT -TP -nologo -D_HAS_EXCEPTIONS=0 -W3 -Gy -wd4251 -wd4244 -wd4267 -wd4345 -wd4351 -wd4482 -wd4800 -wd4819 -we4553 -GR- -DNDEBUG -DTRIMMED -Zi -Zi -UDEBUG -DNDEBUG -O1 -Oi -Oy- -Fdgenerated.pdb e:/builds/slave/c-cen-t-w32/build/mailnews/import/eudora/src/nsEudoraEditor.cpp nsEudoraFilters.cpp mozmake.exe[4]: *** [gfxWindowsPlatform.obj] Error 2 mozmake.exe[3]: *** [gfx/thebes/target] Error 2 mozmake.exe[3]: *** Waiting for unfinished jobs.... nsImportFieldMap.cpp
Fixed by Neil's patch from bug 1101130.
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → DUPLICATE
Different bustage. Reopening and unduping.
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
Status: REOPENED → NEW
Sorry, this is actually a regression from bug 1097803, not 1101130.
Assignee: nobody → neil
Status: NEW → ASSIGNED
Attachment #8528951 - Flags: review?(bas)
Attachment #8528951 - Flags: review?(bas) → review+
Component: Build Config → Graphics
Product: SeaMonkey → Core
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 10 years ago10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: