Bug 1103868 - "'SupportsD2D1' : is not a member of 'mozilla::gfx::Factory'". r=bas